--- a/app/users/views/user-list.html
+++ b/app/users/views/user-list.html
@@ -20,10 +20,10 @@
         <tbody>
             <tr ng-repeat="user in $ctrl.Users">
                 <td><img class="thumbnail" ng-src="{{user.profilePic}}" alt=""></td>
-                <td><a ui-sref="user.detail({id:user.id})"{{user.firstName}} {{user.lastName}}</td>
+                <td><a ui-sref="user.detail({id:user.id})">{{user.firstName}} {{user.lastName}}</a></td>
                 <td>{{user.email}}</td>
                 <td>{{user.address.city}}</td>
-                <td><a ng-href="{{user.company.website}}">{{user.company.name}}</a></td>
+                <td><a ng-href="{{user.company.website}}" target="_blank">{{user.company.name}}</a></td>
             </tr>
         </tbody>
     </table>
