--- a/app/users/views/user-add.html
+++ b/app/users/views/user-add.html
@@ -9,25 +9,21 @@
     </div>
     <br>
     <form novalidate name="UserForm" ng-submit="UserForm.$valid && $ctrl.action.save()">
-       <pre>{{UserForm | json}}</pre>
         <div class="row">
             <div class="col-sm-6">
-                <div class="form-group" 
-                   ng-class="{'has-error':UserForm.$submitted && UserForm.firstName.$error.required}">
+                <div class="form-group" ng-class="{'has-error':UserForm.$submitted && UserForm.firstName.$error.required}">
                     <label for="">First Name</label>
                     <input required type="text" name="firstName" ng-model="$ctrl.User.firstName" class="form-control">
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="form-group"
-                   ng-class="{'has-error':UserForm.$submitted && UserForm.lastName.$error.required}">
+                <div class="form-group" ng-class="{'has-error':UserForm.$submitted && UserForm.lastName.$error.required}">
                     <label for="">Last Name</label>
                     <input required name="lastName" type="text" ng-model="$ctrl.User.lastName" class="form-control">
                 </div>
             </div>
             <div class="col-sm-12">
-                <div class="form-group"
-                   ng-class="{'has-error':UserForm.$submitted && (UserForm.email.$error.email || UserForm.email.$error.required)}">
+                <div class="form-group" ng-class="{'has-error':UserForm.$submitted && (UserForm.email.$error.email || UserForm.email.$error.required)}">
                     <label for="">Email</label>
                     <input required name="email" type="email" ng-model="$ctrl.User.email" class="form-control">
                 </div>
@@ -55,13 +51,13 @@
                     <label for="">Country</label>
                     <input type="text" name="country" class="form-control" ng-model="$ctrl.User.address.country">
                 </div>
-            </div>            
+            </div>
             <div class="col-sm-6">
                 <div class="form-group">
                     <label for="">Zip</label>
-                    <input type="text" name="zip" class="form-control" ng-model="$ctrl.User.address.zip" >
+                    <input type="text" name="zip" class="form-control" ng-model="$ctrl.User.address.zip">
                 </div>
-            </div>            
+            </div>
             <div class="col-sm-6">
                 <div class="form-group" ng-init="$ctrl.User.company={}">
                     <label for="">Company</label>
@@ -71,10 +67,10 @@
             <div class="col-sm-6">
                 <div class="form-group">
                     <label for="">Company Website</label>
-                    <input type="url" class="form-control" ng-model="$ctrl.User.address.website">
+                    <input type="url" class="form-control" ng-model="$ctrl.User.company.website">
                 </div>
             </div>
-            
+
         </div>
         <button class="btn btn-primary">Add</button>
     </form>
